--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
     inputs:
       test:
         description: 'PSRA builds'
-        required: true
+        required: false
         default: false
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
