--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,15 +5,16 @@ name: CI
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
 on:
-#  push:
-#    branches: [ main ]
+  push:
+    branches_ignore: 
+       [**]
 #  pull_request:
 #    branches: [ main ]
   workflow_dispatch:
     inputs:
       test:
         description: 'PSRA builds'
-        required: false
+        required: true
         default: false
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
