--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,21 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI-self-hosted
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
 on:
   push:
-    branches-ignore: 
-      - '**'
-  pull_request:
     branches: [ main ]
-  workflow_dispatch:
-    inputs:
-      test:
-        description: 'PSRA builds'
-        required: true
-        default: false
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+env:
+  app_pool_name: partsnew
+  app_name: newparts
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  Build:
+    runs-on: test-app
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+    - name: Checkout the source code
+      uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-  test:
-    if: github.event.inputs.test== true
-    runs-on: ubuntu-latest
-    steps:
-      - name: execute one liner
-        run: echo codition satisfied
-    
+    - name: Run Powershell
+      run: |
+        & '${{github.workspace}}\app.ps1' -pool_name ${{env.app_pool_name}} -app_name ${{env.app_name}}
